# mipoco

./: .gitignore  Cargo.toml  README.md  WINDOWS_TESTING.md  build.rs  config.example.toml
.github/workflows/: release.yml
packaging/: render-icons.py
packaging/linux/: build-appimage.sh  mipoco-launcher  mipoco.desktop
packaging/windows/: README.md  mipoco.nsi
src/: app.rs  clipboard.rs  config.rs  event.rs  exec.rs  explorer.rs  layout.rs  main.rs  notify.rs  persist.rs  pty.rs  setup.rs  update.rs  viewer.rs
src/ui/: explorer.rs  mod.rs  pane.rs  settings.rs  setup.rs
